Prepare for native image